RESOLVED FIXED283358
[content-visibility] Property should not apply to ruby
https://bugs.webkit.org/show_bug.cgi?id=283358
Summary [content-visibility] Property should not apply to ruby
alan
Reported 2024-11-19 05:57:35 PST
ssia
Attachments
Patch (9.63 KB, patch)
2024-11-19 06:07 PST, alan
no flags
[fast-cq]Patch (10.92 KB, patch)
2024-11-19 10:07 PST, alan
no flags
alan
Comment 1 2024-11-19 06:07:41 PST
alan
Comment 2 2024-11-19 10:07:25 PST
Created attachment 473279 [details] [fast-cq]Patch
EWS
Comment 3 2024-11-19 13:30:15 PST
Committed 286818@main (83fdcf4a58d0): <https://commits.webkit.org/286818@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473279 [details].
Radar WebKit Bug Importer
Comment 4 2024-11-19 13:31:16 PST
Tim Nguyen (:ntim)
Comment 5 2024-11-24 17:48:33 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/49348
Note You need to log in before you can comment on or make changes to this bug.