[content-visibility] Property should not apply to ruby https://bugs.webkit.org/show_bug.cgi?id=283358

Reviewed by Antti Koivisto.

1. content-visibility applies to elements for which size containment can apply.
2. size containment does not apply to ruby.

Let's make sure that isSkippedContentRoot reflects these rules.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-on-ruby-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-on-ruby-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-on-ruby.html: Added.
* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/RenderStyleInlines.h:
(WebCore::RenderStyle::isInternalTableBox const):
(WebCore::RenderStyle::isInternalTableBox):
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjust const):

Canonical link: https://commits.webkit.org/286818@main